After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745226 - Vorbis RTP payloader metadata is slightly wrong
Vorbis RTP payloader metadata is slightly wrong
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-26 15:37 UTC by Sebastian Rasmussen
Modified: 2015-02-26 15:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed trivial patch. (1.10 KB, patch)
2015-02-26 15:37 UTC, Sebastian Rasmussen
committed Details | Review

Description Sebastian Rasmussen 2015-02-26 15:37:04 UTC
A trivial fix for the metadata of vorbis RTP payloader is attached.
Comment 1 Sebastian Rasmussen 2015-02-26 15:37:51 UTC
Created attachment 297998 [details] [review]
Proposed trivial patch.
Comment 2 Tim-Philipp Müller 2015-02-26 15:58:08 UTC
Thanks, pushed:

commit d331d931dbc526653f21921ab07215ac22dbb6b6
Author: Sebastian Rasmussen <sebrn@axis.com>
Date:   Thu Feb 26 16:10:41 2015 +0100

    rtpvorbispay: fix payloader description and author e-mail
    
    https://bugzilla.gnome.org/show_bug.cgi?id=745226