rtpvorbispay: fix payloader description and author e-mail

https://bugzilla.gnome.org/show_bug.cgi?id=745226